--- a/Index.htm
+++ b/Index.htm
@@ -63,7 +63,7 @@
                     </a>
                 </div>
                 <div class="hero__image">
-                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 120">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 120">
                           <defs>
                               <linearGradient id="screenGradient" x1="0%" y1="0%" x2="100%" y2="100%">
                                   <stop offset="0%" stop-color="#32DE8A" stop-opacity="0.5"></stop>
@@ -149,55 +149,45 @@
             </div>
             <div class="projects__container container grid">
                 
-                <div class="project__card">
-                    <div class="project__card-inner">
-                        <div class="project__card-front">
-                            <img src="images/prof-vane-pdfs.png" alt="Plataforma educacional Prof Vane PDFs">
+                <div class="project-card animated-element">
+                    <div class="project-card__image">
+                        <img src="images/prof-vane-pdfs.png" alt="Plataforma educacional Prof Vane PDFs">
+                    </div>
+                    <div class="project-card__overlay">
+                        <h3 class="project__title">Prof Vane PDFs</h3>
+                        <div class="project__details">
+                            <p>Uma landing page vibrante e de fácil navegação para centralizar e vender materiais pedagógicos, fortalecendo a marca da cliente.</p>
                         </div>
-                        <div class="project__card-back">
-                            <h3 class="project__title">Prof Vane PDFs</h3>
-                            <div class="project__details">
-                                <h4><i class="fas fa-bullseye"></i> O Desafio</h4>
-                                <p>A cliente precisava de uma vitrine online profissional para centralizar e vender seus materiais pedagógicos.</p>
-                                <h4><i class="fas fa-lightbulb"></i> A Solução</h4>
-                                <p>Criei uma landing page vibrante e de fácil navegação, fortalecendo a sua marca.</p>
-                            </div>
-                            <div class="project__tech-list">
-                                <span class="tech-badge">HTML5</span>
-                                <span class="tech-badge">CSS3</span>
-                                <span class="tech-badge">JavaScript</span>
-                            </div>
-                            <div class="project__links">
-                                <a href="https://materiaisdaprofvane.netlify.app/" target="_blank" class="project__link">Ver Site <i class="fas fa-arrow-right"></i></a>
-                                <a href="https://github.com/everton-dev/prof-vane-pdfs" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
-                            </div>
+                        <div class="project__tech-list">
+                            <span class="tech-badge">HTML5</span>
+                            <span class="tech-badge">CSS3</span>
+                            <span class="tech-badge">JavaScript</span>
+                        </div>
+                        <div class="project__links">
+                            <a href="https://materiaisdaprofvane.netlify.app/" target="_blank" class="project__link">Ver Site <i class="fas fa-arrow-right"></i></a>
+                            <a href="https://github.com/everton-dev/prof-vane-pdfs" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
 
-                <div class="project__card">
-                    <div class="project__card-inner">
-                        <div class="project__card-front">
-                            <img src="images/sistema-financeiro.png" alt="Dashboard Financeiro Pessoal">
+                <div class="project-card animated-element">
+                    <div class="project-card__image">
+                        <img src="images/sistema-financeiro.png" alt="Dashboard Financeiro Pessoal">
+                    </div>
+                    <div class="project-card__overlay">
+                        <h3 class="project__title">Dashboard Financeiro</h3>
+                        <div class="project__details">
+                            <p>Um PWA que funciona offline e permite o controle de contas e metas, com gráficos interativos para organizar finanças de forma intuitiva.</p>
                         </div>
-                        <div class="project__card-back">
-                            <h3 class="project__title">Dashboard Financeiro</h3>
-                            <div class="project__details">
-                                <h4><i class="fas fa-bullseye"></i> O Desafio</h4>
-                                <p>Desenvolver uma ferramenta prática para que qualquer pessoa pudesse organizar suas finanças de forma intuitiva.</p>
-                                <h4><i class="fas fa-lightbulb"></i> A Solução</h4>
-                                <p>Criei um PWA que funciona offline e permite o controle de contas e metas, com gráficos interativos.</p>
-                            </div>
-                            <div class="project__tech-list">
-                                <span class="tech-badge">JavaScript</span>
-                                <span class="tech-badge">PWA</span>
-                                <span class="tech-badge">Chart.js</span>
-                                <span class="tech-badge special-badge">Uso Gratuito</span>
-                            </div>
-                            <div class="project__links">
-                                <a href="https://sistema-financeiro-avancado.netlify.app/" target="_blank" class="project__link">Usar Ferramenta <i class="fas fa-arrow-right"></i></a>
-                                <a href="#" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
-                            </div>
+                        <div class="project__tech-list">
+                            <span class="tech-badge">JavaScript</span>
+                            <span class="tech-badge">PWA</span>
+                            <span class="tech-badge">Chart.js</span>
+                            <span class="tech-badge special-badge">Uso Gratuito</span>
+                        </div>
+                        <div class="project__links">
+                            <a href="https://sistema-financeiro-avancado.netlify.app/" target="_blank" class="project__link">Usar Ferramenta <i class="fas fa-arrow-right"></i></a>
+                            <a href="#" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
