--- a/Index.htm
+++ b/Index.htm
@@ -153,10 +153,13 @@
                     <div class="project-card__image">
                         <img src="images/prof-vane-pdfs.png" alt="Plataforma educacional Prof Vane PDFs">
                     </div>
-                    <div class="project-card__overlay">
+                    <div class="project-card__content">
                         <h3 class="project__title">Prof Vane PDFs</h3>
                         <div class="project__details">
-                            <p>Uma landing page vibrante e de fácil navegação para centralizar e vender materiais pedagógicos, fortalecendo a marca da cliente.</p>
+                            <h4><i class="fas fa-bullseye"></i> O Desafio</h4>
+                            <p>A cliente precisava de uma vitrine online profissional para centralizar e vender seus materiais pedagógicos.</p>
+                            <h4><i class="fas fa-lightbulb"></i> A Solução</h4>
+                            <p>Criei uma landing page vibrante e de fácil navegação, fortalecendo a sua marca.</p>
                         </div>
                         <div class="project__tech-list">
                             <span class="tech-badge">HTML5</span>
@@ -164,7 +167,7 @@
                             <span class="tech-badge">JavaScript</span>
                         </div>
                         <div class="project__links">
-                            <a href="https://materiaisdaprofvane.netlify.app/" target="_blank" class="project__link">Ver Site <i class="fas fa-arrow-right"></i></a>
+                            <a href="https://materiaisdaprofvane.netlify.app/" target="_blank" class="project__link">Ver Site <i class="fas fa-external-link-alt"></i></a>
                             <a href="https://github.com/everton-dev/prof-vane-pdfs" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
@@ -174,10 +177,13 @@
                     <div class="project-card__image">
                         <img src="images/sistema-financeiro.png" alt="Dashboard Financeiro Pessoal">
                     </div>
-                    <div class="project-card__overlay">
+                    <div class="project-card__content">
                         <h3 class="project__title">Dashboard Financeiro</h3>
                         <div class="project__details">
-                            <p>Um PWA que funciona offline e permite o controle de contas e metas, com gráficos interativos para organizar finanças de forma intuitiva.</p>
+                            <h4><i class="fas fa-bullseye"></i> O Desafio</h4>
+                            <p>Desenvolver uma ferramenta prática para que qualquer pessoa pudesse organizar suas finanças de forma intuitiva.</p>
+                            <h4><i class="fas fa-lightbulb"></i> A Solução</h4>
+                            <p>Criei um PWA que funciona offline e permite o controle de contas e metas, com gráficos interativos.</p>
                         </div>
                         <div class="project__tech-list">
                             <span class="tech-badge">JavaScript</span>
@@ -186,7 +192,7 @@
                             <span class="tech-badge special-badge">Uso Gratuito</span>
                         </div>
                         <div class="project__links">
-                            <a href="https://sistema-financeiro-avancado.netlify.app/" target="_blank" class="project__link">Usar Ferramenta <i class="fas fa-arrow-right"></i></a>
+                            <a href="https://sistema-financeiro-avancado.netlify.app/" target="_blank" class="project__link">Usar Ferramenta <i class="fas fa-external-link-alt"></i></a>
                             <a href="#" target="_blank" class="project__link" aria-label="Ver código no GitHub"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
