--- a/Index.htm
+++ b/Index.htm
@@ -35,6 +35,7 @@
                     <li class="nav__item"><a href="#about" class="nav__link">Sobre</a></li>
                     <li class="nav__item"><a href="#services" class="nav__link">Serviços</a></li>
                     <li class="nav__item"><a href="#projects" class="nav__link">Projetos</a></li>
+                    <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contato</a></li>
                 </ul>
             </div>
@@ -92,7 +93,7 @@
                 <div class="about__content">
                     <h3>Minha História</h3>
                     <p class="about__description">
-                        Olá, sou Everton! Minha transição da contabilidade para a tecnologia foi uma busca por criar soluções práticas que realmente impactam o crescimento de um negócio. Hoje, meu objetivo é ser mais que um programador: sou um parceiro dedicado a entender suas metas e traduzi-las em um site que não apenas impressiona visualmente, mas que também funciona como uma ferramenta de negócios eficaz.
+                        Olá, sou Everton! Minha vivência na área fiscal e contábil me ensinou a pensar além das linhas de código, com foco em valor, investimento e retorno. Hoje, eu uno essa visão analítica com a tecnologia para criar soluções web que não são apenas visualmente impressionantes, mas verdadeiras ferramentas de negócio. Meu objetivo é ser o parceiro que entende suas metas e as transforma em um site projetado para gerar crescimento e resultados concretos.
                     </p>
                     
                     <h4 class="info-group__title"><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
@@ -198,6 +199,54 @@
                     </div>
                 </div>
 
+            </div>
+        </section>
+
+        <section id="blog" class="blog section">
+            <div class="section__header">
+                <h2 class="section__title">Visão Estratégica & Dicas</h2>
+                <span class="section__subtitle">Artigos para ajudar seu negócio a crescer no digital</span>
+            </div>
+            <div class="blog__container container grid">
+                <div class="blog__card animated-element">
+                    <div class="blog__image-placeholder">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="blog__content">
+                        <span class="blog__category">Estratégia</span>
+                        <h3 class="blog__title">Landing Page vs. Site Institucional: Qual o melhor para seu negócio?</h3>
+                        <p class="blog__excerpt">
+                            Entenda a diferença crucial entre essas duas ferramentas e descubra qual delas é a ideal para alcançar seus objetivos de marketing e vendas.
+                        </p>
+                        <a href="#" class="blog__link">Leia Mais <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="blog__card animated-element">
+                    <div class="blog__image-placeholder">
+                        <i class="fas fa-tachometer-alt"></i>
+                    </div>
+                    <div class="blog__content">
+                        <span class="blog__category">Performance</span>
+                        <h3 class="blog__title">Como a velocidade do seu site impacta diretamente suas vendas</h3>
+                        <p class="blog__excerpt">
+                            Cada segundo de espera pode custar um cliente. Veja como um site rápido melhora a experiência do usuário, o ranking no Google e sua receita.
+                        </p>
+                         <a href="#" class="blog__link">Leia Mais <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="blog__card animated-element">
+                    <div class="blog__image-placeholder">
+                        <i class="fas fa-paint-brush"></i>
+                    </div>
+                     <div class="blog__content">
+                        <span class="blog__category">Design</span>
+                        <h3 class="blog__title">3 Sinais claros de que seu site precisa de uma reforma urgente</h3>
+                        <p class="blog__excerpt">
+                            Seu site parece antigo, não funciona bem no celular ou não gera contatos? Saiba quando é a hora de investir em uma atualização estratégica.
+                        </p>
+                         <a href="#" class="blog__link">Leia Mais <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
             </div>
         </section>
 
