--- a/Index.htm
+++ b/Index.htm
@@ -64,19 +64,19 @@
                     </a>
                 </div>
                 <div class="hero__image">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 120">
-                          <defs>
-                              <linearGradient id="screenGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                  <stop offset="0%" stop-color="#32DE8A" stop-opacity="0.5"></stop>
-                                  <stop offset="100%" stop-color="#34D399" stop-opacity="0.5"></stop>
-                              </linearGradient>
-                          </defs>
-                          <path d="M 10 110 L 190 110 L 200 100 L 0 100 Z" fill="#1E293B"></path>
-                          <rect x="15" y="10" width="170" height="90" rx="5" fill="#0F172A" stroke="#32DE8A" stroke-width="1"></rect>
-                          <rect class="animated-screen" x="25" y="20" width="150" height="70" fill="url(#screenGradient)"></rect>
-                          <path d="M 35 35 H 80 M 35 45 H 95 M 35 55 H 70 M 35 65 H 105" stroke="#F8FAFC" stroke-width="1.5" stroke-opacity="0.3"></path>
-                          <circle cx="100" cy="55" r="3" fill="#34D399" opacity="0.7"></circle>
-                      </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 120">
+                        <defs>
+                            <linearGradient id="screenGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                                <stop offset="0%" stop-color="#32DE8A" stop-opacity="0.5"></stop>
+                                <stop offset="100%" stop-color="#34D399" stop-opacity="0.5"></stop>
+                            </linearGradient>
+                        </defs>
+                        <path d="M 10 110 L 190 110 L 200 100 L 0 100 Z" fill="#1E293B"></path>
+                        <rect x="15" y="10" width="170" height="90" rx="5" fill="#0F172A" stroke="#32DE8A" stroke-width="1"></rect>
+                        <rect class="animated-screen" x="25" y="20" width="150" height="70" fill="url(#screenGradient)"></rect>
+                        <path d="M 35 35 H 80 M 35 45 H 95 M 35 55 H 70 M 35 65 H 105" stroke="#F8FAFC" stroke-width="1.5" stroke-opacity="0.3"></path>
+                        <circle cx="100" cy="55" r="3" fill="#34D399" opacity="0.7"></circle>
+                    </svg>
                 </div>
             </div>
         </section>
@@ -95,6 +95,10 @@
                     <p class="about__description">
                         Olá, sou Everton! Minha vivência na área fiscal e contábil me ensinou a pensar além das linhas de código, com foco em valor, investimento e retorno. Hoje, eu uno essa visão analítica com a tecnologia para criar soluções web que não são apenas visualmente impressionantes, mas verdadeiras ferramentas de negócio. Meu objetivo é ser o parceiro que entende suas metas e as transforma em um site projetado para gerar crescimento e resultados concretos.
                     </p>
+                    
+                    <blockquote class="about__quote">
+                        "Minha formação em Ciências Contábeis me permite enxergar seu site não apenas como um design, mas como um ativo. Eu planejo cada projeto com foco em métricas, conversão e retorno sobre o investimento (ROI), garantindo que o resultado final realmente impulsione seu negócio."
+                    </blockquote>
                     
                     <h4 class="info-group__title"><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
                     <div class="academic__grid">
