--- a/Index.htm
+++ b/Index.htm
@@ -156,7 +156,10 @@
                 
                 <div class="project-card animated-element">
                     <div class="project-card__image">
-                        <img src="images/prof-vane-pdfs.png" alt="Plataforma educacional Prof Vane PDFs">
+                        <picture>
+                            <source srcset="images/prof-vane-pdfs.webp" type="image/webp">
+                                <img src="images/prof-vane-pdfs.png" alt="Plataforma educacional Prof Vane PDFs">
+                        </picture>
                     </div>
                     <div class="project-card__content">
                         <h3 class="project__title">Prof Vane PDFs</h3>
@@ -180,7 +183,10 @@
 
                 <div class="project-card animated-element">
                     <div class="project-card__image">
-                        <img src="images/sistema-financeiro.png" alt="Dashboard Financeiro Pessoal">
+                        <picture>
+                            <source srcset="images/sistema-financeiro.webp" type="image/webp">
+                            <img src="images/sistema-financeiro.png" alt="Dashboard Financeiro Pessoal">
+                        </picture>
                     </div>
                     <div class="project-card__content">
                         <h3 class="project__title">Dashboard Financeiro</h3>
