--- a/Index.htm
+++ b/Index.htm
@@ -35,6 +35,7 @@
                     <li class="nav__item"><a href="#about" class="nav__link">Sobre</a></li>
                     <li class="nav__item"><a href="#services" class="nav__link">Serviços</a></li>
                     <li class="nav__item"><a href="#projects" class="nav__link">Projetos</a></li>
+                    <li class="nav__item"><a href="#testimonials" class="nav__link">Depoimentos</a></li>
                     <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contato</a></li>
                 </ul>
@@ -158,7 +159,7 @@
                     <div class="project-card__image">
                         <picture>
                             <source srcset="images/prof-vane-pdfs.webp" type="image/webp">
-                                <img src="images/prof-vane-pdfs.png" alt="Plataforma educacional Prof Vane PDFs">
+                            <img src="images/prof-vane-pdfs.png" alt="Plataforma educacional Prof Vane PDFs">
                         </picture>
                     </div>
                     <div class="project-card__content">
@@ -212,6 +213,29 @@
             </div>
         </section>
 
+        <section id="testimonials" class="testimonials section">
+            <div class="section__header">
+                <h2 class="section__title">O Que Dizem Sobre Meu Trabalho</h2>
+                <span class="section__subtitle">A confiança de quem já é parceiro</span>
+            </div>
+            <div class="testimonials__container container">
+                <div class="testimonial__card animated-element">
+                    <i class="fas fa-quote-left testimonial__quote-icon"></i>
+                    <blockquote class="testimonial__text">
+                        O Everton transformou minha ideia em uma realidade digital incrível! Ele não só entregou uma landing page linda e funcional, como também entendeu a essência do meu projeto pedagógico. O resultado foi uma plataforma profissional que fortaleceu minha marca e facilitou a venda dos meus materiais. Recomendo demais!
+                    </blockquote>
+                    <div class="testimonial__client">
+                        <div class="testimonial__client-photo">
+                            <span>V</span>
+                        </div>
+                        <div class="testimonial__client-info">
+                            <h4 class="testimonial__client-name">Vane M.</h4>
+                            <span class="testimonial__client-title">Criadora do Prof Vane PDFs</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="blog" class="blog section">
             <div class="section__header">
                 <h2 class="section__title">Visão Estratégica & Dicas</h2>
