adicionado foto perfil

--- a/Index.htm
+++ b/Index.htm
@@ -89,7 +89,7 @@
             </div>
             <div class="about__container container grid">
                 <div class="about__image-container">
-                    <img src="images/sua-foto.jpg" alt="Everton, Desenvolvedor Web" class="about__photo">
+                    <img src="images/fotoperfilportifolio.jpeg" alt="Everton, Desenvolvedor Web" class="about__photo">
                 </div>
                 <div class="about__content">
                     <h3>Minha História</h3>
