--- a/Index.htm
+++ b/Index.htm
@@ -361,9 +361,17 @@
     </footer>
 
     <a href="#" class="scrollup" id="scroll-up" aria-label="Voltar ao topo"><i class="fas fa-arrow-up"></i></a>
-    <a href="https://wa.me/5543998719821?text=Olá,%20Everton!%20Vi%20seu%20portfólio%20e%20gostaria%20de%20um%20orçamento." class="whatsapp-button" id="whatsapp-float-button" target="_blank" aria-label="Fale comigo no WhatsApp">
+    
+    <a href="https://wa.me/5543998719821?text=Olá,%20Everton!%20Vi%20seu%20portfólio%20e%20gostaria%20de%20um%20orçamento." class="whatsapp-button" id="whatsapp-float-button-mobile" target="_blank" aria-label="Fale comigo no WhatsApp">
         <i class="fab fa-whatsapp whatsapp-icon"></i>
         <span class="whatsapp-tooltip">Fale Comigo!</span>
+    </a>
+
+    <a href="https://wa.me/5543998719821?text=Olá,%20Everton!%20Vi%20seu%20portfólio%20e%20gostaria%20de%20um%20orçamento." class="whatsapp-desktop-button" id="whatsapp-float-button-desktop" target="_blank" aria-label="Vamos conversar no WhatsApp?">
+        <div class="whatsapp-desktop-button__content">
+            <i class="fab fa-whatsapp whatsapp-desktop-button__icon"></i>
+            <span class="whatsapp-desktop-button__text">Precisa de um site?</span>
+        </div>
     </a>
 
     <div id="blog-modal" class="modal">
